# neoAI-InstructBench

./: .env.example  README.md  pyproject.toml
data/: neoai-instruct-bench.jsonl
results/: gpt-5.2.jsonl  gpt-5.2_analysis.json  gpt-5.2_judged.jsonl
scripts/: evaluate.py  get_response.py
scripts/utils/: closed_validators.py  llm_utils.py
